# xtml

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml
src/torch/: __init__.py
xtml/: __init__.py  utils.py
xtml/tensorflow/: __init__.py
xtml/torch/: __init__.py  datamodel.py
